--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "graphql": "^16.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.2.0",
     "sharp": "^0.30.3"
   },
   "devDependencies": {
