Added meta description to every page

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_SHOPIFY_SITE=https://gobicashmereswiss.myshopify.com/api/2021-04/graphql.json
 NEXT_PUBLIC_SHOPIFY_API_VERSION=2021-04
 NEXT_PUBLIC_SHOPIFY_STOREFRONT_ACCESS_TOKEN=f883688960750eb93e240fcf3f95c687
+NEXT_PUBLIC_SITE_NAME=Gobi Swiss
